--- a/tools/benchmarking.Rmd
+++ b/tools/benchmarking.Rmd
@@ -33,7 +33,7 @@ source ~/.bashrc
 
 cd neutrality/no_migration
 
-for((i=1;i<=4;i++))
+for((i=1;i<=5;i++))
 do
   momentspp params=opt.bpp FILE=model_$i.yaml LABEL=model_$i ORDER=1
 done
@@ -76,7 +76,7 @@ def write_column(y, out_file):
         if m.split("_")[0] == "pi2":
             out_file.write(str(v) + "\n")
     
-for i in range(1, 5):
+for i in range(1, 6):
   with open(f"neutrality/no_migration/moments_LD_model_{i}.csv", "w+") as fout:
       f = f"neutrality/no_migration/model_{i}_demes.yaml"
       pops = ["A", "B"]
@@ -92,13 +92,27 @@ for i in range(1, 5):
 
 ```{r neutral-bench, include=TRUE, eval=TRUE, results=FALSE, message=FALSE, warning=FALSE}
 
-num_models <- 4
+num_models <- 5
 
 # considering symmetries under neutrality
-core_stats <- c("DD_1_1", "DD_1_2", "DD_2_2",
-                "Dr_1_1_(1-2p1)^1", "Dr_1_1_(1-2p2)^1", "Dr_1_2_(1-2p2)^1", "Dr_2_1_(1-2p1)^1", "Dr_2_1_(1-2p2)^1", "Dr_2_2_(1-2p2)^1",
-                "pi2_1_1_1_1", "pi2_1_1_1_2", "pi2_1_1_2_2", "pi2_1_2_1_2", "pi2_1_2_2_2", "pi2_2_2_2_2",
-                "Hl_1_1", "Hl_1_2", "Hl_2_2")
+core_stats <- c("DD_1_1", 
+                "DD_1_2", 
+                "DD_2_2",
+                "Dr_1_1_(1-2p1)^1",
+                "Dr_1_1_(1-2p2)^1",
+                "Dr_1_2_(1-2p2)^1",
+                "Dr_2_1_(1-2p1)^1", 
+                "Dr_2_1_(1-2p2)^1",
+                "Dr_2_2_(1-2p2)^1",
+                "pi2_1_1_1_1", 
+                "pi2_1_1_1_2",
+                "pi2_1_1_2_2", 
+                "pi2_1_2_1_2", 
+                "pi2_1_2_2_2", 
+                "pi2_2_2_2_2",
+                "Hl_1_1", 
+                "Hl_1_2",
+                "Hl_2_2")
 
 # constant Ne
 mpp <- numeric()
@@ -112,7 +126,11 @@ for(i in 1:num_models) {
 
 tbl <- as.data.frame(mpp)
 tbl$stats <- core_stats
-tbl$scenario <- c(rep(1, length(core_stats)), rep(2, length(core_stats)), rep(3, length(core_stats)), rep(4, length(core_stats)))
+tbl$scenario <- c(rep(1, length(core_stats)),
+                  rep(2, length(core_stats)),
+                  rep(3, length(core_stats)),
+                  rep(4, length(core_stats)),
+                  rep(5, length(core_stats)))
 
 mLD <- numeric()
 for(i in 1:num_models) {
@@ -132,7 +150,7 @@ p1 <- p1 + geom_point(size=3) + theme_bw()
 p1 <- p1 + geom_hline(yintercept=0.99, linetype=2)
 p1 <- p1 + geom_hline(yintercept=1.01, linetype=2)
 p1 <- p1 + labs(title="++ / LD", x="Moment", y="Ratio", shape="Model")
-p1 <- p1 + scale_shape_manual(values=(0:3))
+p1 <- p1 + scale_shape_manual(values=(0:(num_models - 1)))
 p1 <- p1 + theme(axis.title=element_text(size=12),
                  axis.text=element_text(size=10),
                  axis.text.x=element_text(angle=90, size=8, vjust=0.5, hjust=1.0),
