--- a/tools/benchmarking.Rmd
+++ b/tools/benchmarking.Rmd
@@ -95,7 +95,7 @@ for i in range(1, 5):
 
 ```{r neutral-bench, include=TRUE, eval=TRUE, results=FALSE, message=FALSE, warning=FALSE}
 
-num_models <- 4
+n_models <- 4
 
 # considering symmetries under neutrality
 core_stats <- c("DD_1_1", 
@@ -129,10 +129,11 @@ for(i in 1:num_models) {
 
 tbl <- as.data.frame(mpp)
 tbl$stats <- core_stats
-tbl$scenario <- c(rep(1, length(core_stats)),
-                  rep(2, length(core_stats)),
-                  rep(3, length(core_stats)),
-                  rep(4, length(core_stats)))
+scenario <- NULL
+for(i in 1:n_models) { 
+  scenario <- c(scenario, rep(i, length(core_stats)))
+}
+tbl$scenario <- scenario
 
 mLD <- numeric()
 for(i in 1:num_models) {
@@ -167,7 +168,7 @@ save_plot("neutrality/no_migration/ratios_no-mig.pdf", p1, base_height=12, base_
 
 ### Building Demes files
 
-```{r, selected-2-pop, include=TRUE, eval=TRUE, results=FALSE, message=FALSE, warning=FALSE}
+```{r, demes-selected-2-pop, include=TRUE, eval=TRUE, results=FALSE, message=FALSE, warning=FALSE}
 
 # symmetrical pop sizes
 N1 <- 10000
@@ -180,6 +181,7 @@ s2 <- c(0, -5e-06, -5e-05, -1e-04, -5e-04)
 split_time <- 2000
 
 params <- crossing(N1, N2, u, r, s1, s2)
+params$scenario <- 1:nrow(params)
 n_models <- nrow(params)
 
 for(i in 1:n_models) {
@@ -254,7 +256,7 @@ source ~/.bashrc
 
 cd selection/no_migration
 
-for((i=1;i<=250;i++))
+for((i=1;i<=$n_models;i++))
 do
   momentspp params=opt.bpp FILE=model_$i.yaml LABEL=model_$i ORDER=25
 done
@@ -262,6 +264,71 @@ done
 cd ../..
 ```
 
+### Plots
+
+```{r, plots-selected-2-pop, include=TRUE, eval=TRUE, results=FALSE, message=FALSE, warning=FALSE}
+
+core_stats <- c("DD_1_1", 
+                "DD_1_2", 
+                "DD_2_2",
+                "Dr_1_1_(1-2p1)^1",
+                "Dr_1_1_(1-2p2)^1",
+                "Dr_1_2_(1-2p2)^1",
+                "Dr_2_1_(1-2p1)^1", 
+                "Dr_2_1_(1-2p2)^1",
+                "Dr_2_2_(1-2p2)^1",
+                "pi2_1_1_1_1", 
+                "pi2_1_1_1_2",
+                "pi2_1_1_2_2", 
+                "pi2_1_2_1_2", 
+                "pi2_1_2_2_2", 
+                "pi2_2_2_2_2",
+                "Hl_1_1", 
+                "Hl_1_2",
+                "Hl_2_2")
+
+expectation <- numeric()
+for(i in 1:n_models) {
+    
+  x <- read.table(paste("selection/no_migration/model_", i, "_expectations.txt", sep=""))
+  x <- subset(x, V1 %in% core_stats)
+  x <- slice(x, 1:9, 13:18, 10:12) # to match moments.LD output
+  expectation <- c(expectation, x$V3)
+}
+
+tbl <- as.data.frame(expectation)
+tbl$stats <- core_stats
+scenario <- NULL
+for(i in 1:n_models) { 
+  scenario <- c(scenario, rep(i, length(core_stats)))
+}
+tbl$scenario <- scenario
+
+df <- full_join(tbl, params, by="scenario")
+
+# transforms variables
+df$alpha_1 <- df$s1 * df$N1
+df$alpha_2 <- df$s2 * df$N2
+
+# symmetric population sizes
+df_sym_N <- df[df$N1==df$N2,]
+df_sym_N[df_sym_N$r==0,]$r <- 1e-12
+
+d1d2 <- subset(df_sym_N, stats %in% c("DD_1_2", "pi2_1_2_1_2")) 
+ratio <- d1d2[d1d2$stats=="DD_1_2",]$expectation / d1d2[d1d2$stats=="pi2_1_2_1_2",]$expectation
+  
+p1 <- ggplot(data=d1d2, aes(x=r, y=expectation)) + facet_grid(+alpha_1~alpha_2)
+p1 <- p1 + geom_point(size=2, shape=1) + theme_bw()
+p1 <- p1 + scale_x_log10(breaks=c(1e-12, 1e-6, 1e-5, 1e-4, 1e-3)) + scale_y_log10()
+p1 <- p1 + labs(title="Symmetric Population Sizes", x="r", y="E[D1D2]")
+p1 <- p1 + theme(axis.title=element_text(size=12),
+                 axis.text=element_text(size=10),
+                 axis.text.x=element_text(angle=90, size=8, vjust=0.5, hjust=1.0),
+                 legend.position="bottom")
+
+save_plot("selection/no_migration/D1D2_no-mig.pdf", p1, base_height=12, base_width=12)
+
+```
 
 # Check-my-matrix
 
